--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <title>Eleva: Planejador de Estudos</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17820265334"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TR03EM92ZT"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'AW-17820265334');
+    gtag('config', 'G-TR03EM92ZT');
   </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
